# a-server

./: CMakeLists.txt  CMakePresets.json  README.md  main.c  readme.md
base_1/: CMakeLists.txt  tcp_client.c  tcp_server.c
base_11/: CMakeLists.txt  ser_11.c
include/: CMakeLists.txt  get_socket.c  headers.h  read.c
